# ad-ai-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
rust_agent_cli/: Cargo.toml
rust_agent_cli/src/: main.rs
rust_agent_cli/src/chat/: session.rs
rust_agent_cli/src/config/: mod.rs
rust_agent_cli/src/ui/: input.rs  mod.rs  output.rs  progress.rs  spinner.rs
rust_agent_core/: Cargo.toml
rust_agent_core/src/: lib.rs
rust_agent_core/src/api/: client.rs  mod.rs  types.rs
rust_agent_core/src/logging/: mod.rs  setup.rs
rust_agent_core/src/tools/: mod.rs  parser.rs
rust_agent_core/src/tools/rpc/: server.rs
src/: main.rs
src/api/: client.rs  mod.rs  types.rs
src/chat/: mod.rs  session.rs
src/config/: args.rs
src/tools/: interface.rs  mod.rs
src/tools/implementations/: file_analyzer.rs  mod.rs
src/tools/rpc/: client.rs  server.rs
src/ui/: mod.rs
tools_server/: Cargo.toml
tools_server/src/: main.rs
tools_server/src/tools/: file_analyzer.rs  mod.rs  web_search.rs
tools_server/src/tools/file_tool/: converter.rs  mod.rs  tool.rs  types.rs
