[package]
name = "tools_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
arrow-flight = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
rust_agent_core = { path = "../rust_agent_core" }
reqwest = { workspace = true }
urlencoding = { workspace = true }
